--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,40 +3,38 @@
 
 @include mat-core();
 
-
 $md-primary: (
-  50 : #e3e4e4,
-  100 : #b9bbbd,
-  200 : #8b8d91,
-  300 : #5c5f64,
-  400 : #393d43,
-  500 : #161b22,
-  600 : #13181e,
-  700 : #101419,
-  800 : #0c1014,
-  900 : #06080c,
-  A100 : #5184ff,
-  A200 : #1e60ff,
-  A400 : #0044ea,
-  A700 : #003dd0,
-  contrast: (
-      50 : #000000,
-      100 : #000000,
-      200 : #000000,
-      300 : #ffffff,
-      400 : #ffffff,
-      500 : #ffffff,
-      600 : #ffffff,
-      700 : #ffffff,
-      800 : #ffffff,
-      900 : #ffffff,
-      A100 : #000000,
-      A200 : #ffffff,
-      A400 : #ffffff,
-      A700 : #ffffff,
-  )
+    50 : #e4f3fd,
+    100 : #bbe1fb,
+    200 : #8ecdf8,
+    300 : #61b9f5,
+    400 : #3faaf2,
+    500 : #1d9bf0,
+    600 : #1a93ee,
+    700 : #1589ec,
+    800 : #117fe9,
+    900 : #0a6de5,
+    A100 : #ffffff,
+    A200 : #dbeaff,
+    A400 : #a8ccff,
+    A700 : #8fbdff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
 );
-
 
 $md-accent: (
   50 : #e2e2e3,
@@ -134,11 +132,9 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
-
-
 .containter-content{
-  padding-left: 20em;
-  padding-right: 20em;
+  padding-left: 30em;
+  padding-right: 30em;
 }
 
 
