--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -5,7 +5,7 @@
             <mat-card-title>Página Inicial</mat-card-title>
             <mat-icon class="material-icons-outlined ">auto_awesome</mat-icon>
         </mat-card-title-group>
-
+      
         <div class="row">
             <div class="col-sm-1 mt-3">
                 <img src="./../../../assets/user.jpg">
@@ -13,20 +13,9 @@
 
             <div class="col-sm-11 mt-4">
                 <mat-form-field style="resize: none;" class="example-full-width" appearance="none">
-                    <textarea cdkTextareaAutosize matInput placeholder="O que está acontecendo?"></textarea>
+                    <textarea cdkTextareaAutosize matInput [(ngModel)]="tweetText" placeholder="O que está acontecendo?"></textarea>
                 </mat-form-field>
             </div>
-            <!-- 
-            <div class="col-12 mx-5">
-                <button mat-button>
-                    <mat-icon class="mr-3">public</mat-icon>Qualquer pessoa pode responder
-                </button>
-             
-            </div>
-
-         
- -->
-
         </div>
 
         <div class="row">
@@ -43,9 +32,16 @@
                 <mat-icon color="primary" class="material-icons-outlined">pending_actions</mat-icon>
             </div>
             <div class="col mt-3 d-flex justify-content-end">
-                <button mat-raised-button class="tweet-button" color="primary">Tweetar</button>
+                <button mat-raised-button [disabled]="!tweetText" class="tweet-button" (click)="postTweet()" color="primary">Tweetar</button>
             </div>
         </div>
 
     </mat-card>
+    
+    <div class="col" *ngFor="let tweet of arrayTweets">
+        <mat-card class="mat-elevation-z0">
+            {{tweet.comment}}
+        </mat-card>
+    </div>
+
 </div>
