--- a/src/app/routes/home/home.component.scss
+++ b/src/app/routes/home/home.component.scss
@@ -36,13 +36,7 @@ img{
     border-radius: 20px !important;
 }
 
-
-.container-tweet{
-    display: flex;
-}
-.fixed{
-    width: 60px;
-}
-.flex-item{
-    flex-grow: 1;
+.spinner-position{
+    top: 0.5em;
+    left: -1em;
 }
