--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,7 +75,7 @@ $md-warn: (
     200 : #98ddd2,
     300 : #6ecfbf,
     400 : #4fc5b2,
-    500 : #30bba4,
+    500 : red,
     600 : #2bb59c,
     700 : #24ac92,
     800 : #1ea489,
