--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,29 +70,29 @@ $md-accent: (
 );
 
 $md-warn: (
-    50 : #e6f7f4,
-    100 : #c1ebe4,
-    200 : #98ddd2,
-    300 : #6ecfbf,
-    400 : #4fc5b2,
-    500 : red,
-    600 : #2bb59c,
-    700 : #24ac92,
-    800 : #1ea489,
-    900 : #139678,
-    A100 : #c9fff1,
-    A200 : #96ffe5,
-    A400 : #63ffd8,
-    A700 : #49ffd2,
+    50 : #f9e0e0,
+    100 : #f0b3b3,
+    200 : #e68080,
+    300 : #db4d4d,
+    400 : #d42626,
+    500 : #cc0000,
+    600 : #c70000,
+    700 : #c00000,
+    800 : #b90000,
+    900 : #ad0000,
+    A100 : #ffd7d7,
+    A200 : #ffa4a4,
+    A400 : #ff7171,
+    A700 : #ff5858,
     contrast: (
         50 : #000000,
         100 : #000000,
         200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #000000,
-        600 : #000000,
-        700 : #000000,
+        300 : #ffffff,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
         800 : #ffffff,
         900 : #ffffff,
         A100 : #000000,
@@ -105,7 +105,7 @@ $md-warn: (
 $primary: mat-palette($md-primary, 500);
 $accent:  mat-palette($md-accent, 200);
 $warn:    mat-palette($md-warn, 500);
-$warn-color: map-get($md-warn, 500);
+
 
 $theme: mat-light-theme($primary, $accent, $warn);
 
